Kafka connector is ping'able!!!!!!!!!!!!